refactor: remove unused Lombok @Setter and update stream collectors to use toList()